--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'F721'
 - !lcsh 'Mesa Verde National Park (Colo.)'
+- GITenberg
 title: Mesa Verde [Colorado] National Park
 url: http://www.gutenberg.org/ebooks/45535
